@@ -1,3 +1,8 @@
+2004-09-29  Derek Price <derek@ximbiot.com>
+
+	* sanity.sh (config): Handle $SECONDRY_ROOT_DIRNAME output in $proxy
+	mode.
+
 2004-09-29  Mark D. Baushke  <mdb@cvshome.org>
 
 	* sanity.sh: Workaround MacOS X '/bin/ls' is not returning false
